--- a/GATEWAY-SERVICE.properties
+++ b/GATEWAY-SERVICE.properties
@@ -1,6 +1,6 @@
 spring.application.name=GATEWAY-SERVICE
 spring.cloud.gateway.routes[0].id=inventory_service_route
-spring.cloud.gateway.routes[0].uri.=http://localhost:8001
+spring.cloud.gateway.routes[0].uri.=lb://INVENTORY-SERVICE
 spring.cloud.gateway.routes[0].predicates[0]=Path=/product/**
 
 
