--- a/GATEWAY-SERVICE.properties
+++ b/GATEWAY-SERVICE.properties
@@ -2,5 +2,5 @@ spring.application.name=GATEWAY-SERVICE
 spring.cloud.gateway.routes[0].id=inventory_service_route
 spring.cloud.gateway.routes[0].uri=lb://INVENTORY-SERVICE
 spring.cloud.gateway.routes[0].predicates[0]=Path=/product/**
-
+spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
