--- a/GATEWAY-SERVICE.properties
+++ b/GATEWAY-SERVICE.properties
@@ -3,4 +3,6 @@ spring.cloud.gateway.routes[0].id=inventory_service_route
 spring.cloud.gateway.routes[0].uri=lb://INVENTORY-SERVICE
 spring.cloud.gateway.routes[0].predicates[0]=Path=/product/**
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+spring.cloud.gateway.discovery.locator.enabled=true
+
 
